--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,10 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Classify Nature Cat character images</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Use images of <strong>Nature Cat</strong>,<strong>Daisy</strong>,<strong>Squeeks</strong> ,<strong>Ronald</strong>
+      ,<strong>Hal</strong>
     </p>
     <div class='content'>
       <div class='no-display'>
